showcase/showcase.css
@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Comfortaa:wght@300;400;500;600;700&family=Dosis:wght@200;300;400;500;600;700;800&display=swap');

:root {
    --hairpink: #b9506f;
    --textpink: #7C3148;
    --black-blue: #11151C;
    --dark-blue: #212D40;
   
    --pink: #f25d98;
    --soft-pink: #f2a9bc;
   
    --svgs2: #dac5ae;
    --svgs: #a7beed;
    --text: #b49573;
    --texta: #c2aa90;
    --background: #F2EEED;
    --border: #eae2e0;
   }

   * {
    font-family: 'Comfortaa', 'Dosis', Arial, sans-serif;
    padding: 0;
    margin: 0;
    font-size: 18px;
    /* border: 1px solid grey; */
}

h1, h2 {
    font-family: "Pacifico";
    font-size: 1.5rem;
}

h1 {
    font-size: 2rem;
}

h1, h2, p, a {
  padding: 5px;  
  margin: 5px;
}

a {
  text-decoration: underline;
/*   color: var(--hairpink); */
}

a:hover {
  cursor: pointer;
  color: var(--pink);
}

i {
    background-color: var(--pink);
    padding: 8px;
    margin: 5px;
    border-radius: 25px;
    color: white;
    font-weight: 700;
}

main {
    display: flex;
}

img {
    width: 200px;
}

/* ------------------- bio section ------------------ */

.bio-section {
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 30%;
    height: 100%;
    position: fixed;
}

.bio-section div {
    padding: 10px;
    margin: 10px;
    /* border: 1px solid grey; */
}

.tag {
  color: var(--pink);
  font-size: 1.1rem;
  font-weight: 700;
}

/* ------------------ showcase section ----------------- */

.showcase-section {
/*     float: right; */
    display: flex;
    flex-direction: column; 
    align-items: end;
/*     justify-items: end; */
    background-color: var(--svgs);
    width: 100%;
    /* border: 1px solid grey; */
}

.project-img {
    width: 300px;
    height: 200px;
    border: 2px solid var(--svgs);
    border-radius: 10px;
    overflow: hidden;
}

.project-img:hover{
  cursor: pointer;  
/*   position: absolute; */
    bottom: 50%;
}

.hide {
    width: 300px;
    height: 200px;
    /* text-align: center; */
    /* position: absolute; */
    /* right: 50%; */
    /* visibility: hidden; */
}

.showcase-section img {
    /* width: 100%; */
    width: 300px;
    height: 200px;
    object-fit: cover;
    object-position: center;
    /* border: 1px solid var(--svgs);
    border-radius: 10px; */
}

.project-card {
    background-color: white;
    padding: 20px;
    margin: 10px 50px;
    border-radius: 10px;
    display: flex;
    flex-direction: row;
/*     justify-content: end; */
    /* flex-wrap: wrap; */
    width: 60%;
    /* border: 1px solid red; */
}

.project-details {
    width: 70%;
}

.stack {
    display: flex;
    padding-top: 5px;
    margin-top: 5px;
/*     border: 1px solid black; */
/*     flex-direction: column; */
    /* position: absolute right; */
    /* width: 100%; */
}

